:bug: Fix the bug of the jump-to-top btn

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -68,4 +68,5 @@ body {
 	bottom: 1rem;
 	right: 0.3rem;
 	opacity: 0;
+	z-index: 200;
 }
